# Tell pip to use flit to build this package
[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dnikit"
home-page = "https://github.com/apple/dnikit"
license = "Apache-2.0"
description-file="README.md"

author = "Apple, Inc."
author-email = "dnikit-symphony-oss@group.apple.com"
classifiers = [
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
]

requires-python = ">=3.7"
requires = [
    "annoy",  # duplicates -- approximate nearest neighbor oh yeah
    "numpy",
    "scikit-learn",
    "typing_extensions; python_version < '3.8'",
]

[tool.flit.metadata.requires-extra]
# DNIKit BASE EXTENSIONS
image = [
    "opencv-python-headless",
    "Pillow",  # Pillow AKA PIL
]
dimreduction = [
    "umap-learn",
    "pacmap",
]
dataset-report = [
    "pandas",
    "umap-learn",
    "pacmap",
]

# MODEL EXTENSIONS
tensorflow = ["dnikit_tensorflow[tf2]==2.0.0"]
tensorflow1 = ["dnikit_tensorflow[tf1]==2.0.0"]
tensorflow1-gpu = ["dnikit_tensorflow[tf1-gpu]==2.0.0"]
torch = ["dnikit_torch==2.0.0"]

# DEV EXTENSIONS
test = [
    # An issue between pytest-flake8 and flake8 (ConfigFileFinder not found)
    "flake8 < 5.0.0",
    # flake8 now has this requirement because importlib-metadata's update is API breaking
    "importlib-metadata < 4.3; python_version < '3.8'",

    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-xdist[psutil]",
    "pytest-timeout",
    "flake8-copyright",

    # not really a test, but a dev tool
    "bumpversion",
]
doc = [
    "ipykernel",
    "jupyter_client",
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-book-theme",
    "matplotlib", # to build notebooks
    "pandas",
    "jupyter-datatables",
    "seaborn",
]
notebook = [
    "notebook < 7.0.0",
    "matplotlib",
    "pandas",
    "jupyter-datatables",
    "plotly",
]
complete = [
    "dnikit[image]==2.0.0",
    "dnikit[dimreduction]==2.0.0",
    "dnikit[duplicates]==2.0.0",
    "dnikit[dataset-report]==2.0.0",
    "dnikit[tensorflow]==2.0.0",
    "dnikit[notebook]==2.0.0",
]

[tool.flit.metadata.urls]
Documentation = "https://apple.github.io/dnikit"
Changelog = "https://github.com/apple/dnikit/blob/main/CHANGELOG.md"
